--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.24.1",
     "axios": "^1.8.1",
+    "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
     "mockjs": "^1.1.0",
     "react": "^19.0.0",
